--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,9 +1,9 @@
-$primary-text-color: #212121;
-$tittle-text-color: #757575;
-$accent-color: #2196f3;
-$hero-text-color: #ffffff;
-$hero-bgr-color: #2f303a;
-$button-bgr-color: #f5f4fa;
-$icon-color: #afb1b8;
-$prim-font: Roboto, sans-serif;
-$sec-font: Raleway, sans-serif;
+$prim-black: #24292F;
+$sec-black: #949DA7;
+$tre-black: #2196f3;
+$primary-white: #FEFFFF;
+$sec-white: #FFFFFF;
+$point-color: #3383FF;
+$border-color: #0146AD;
+
+$prim-font: 'Alliance No.1', sans-serif;
