--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,9 +1,10 @@
+@import '../../fonts/stylesheet.css';
 $prim-black: #24292F;
 $sec-black: #949DA7;
 $tre-black: #2196f3;
-$primary-white: #FEFFFF;
+$prim-white: #FEFFFF;
 $sec-white: #FFFFFF;
 $point-color: #3383FF;
 $border-color: #0146AD;
 
-$prim-font: 'Alliance No.1', sans-serif;
+$prim-font: 'Alliance No.1';
