--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,31 +1,48 @@
 .page-header {
-    @extend %auto-margin;
-    border-bottom: 1px solid rgba(236, 236, 236, 1);
-    // position: relative;
+  @extend %auto-margin;
+  border-bottom: 1px solid rgba(236, 236, 236, 1);
+  // position: relative;
+  background-image: url("../images/headbbgimg.png");
+  background-size: cover;
+  height: 707px;
+  background-position: center;
+  //   width: 3840px;
+  //   min-height: 707px;
 }
 .page-header__container {
-   @extend %contain-padding;
-   @extend %auto-margin;
-   
-   padding-top: 16px;
-   padding-bottom: 16px;
-  width: 100%;
-//    max-width: 480px;
-   display: flex;
-   flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around;
-    
-   @media screen and (min-width:768px) {
-    max-width: 768px;
-    padding-top: 0;
-    padding-bottom: 0;
-   }
-   @media screen and (min-width:1200px) {
-    max-width: 1200px;
-   }
-    // display: flex;
-    // flex-wrap: wrap;
-    // align-items: center;
-    // justify-content: center;
+  @extend %contain-padding;
+  @extend %auto-margin;
+  max-width: 1920px;
+}
+.logo {
+  color: $sec-white;
+    font-weight: 800;
+    font-style: normal;
+  font-size: 30px;
+  line-height: 0.8;
+  
+}
+.logo__icon {
+  fill: rgba(236, 236, 236, 1);
+}
+.page-header__title {
+    @extend %auto-margin; 
+    margin-top: 108px;
+  color: $prim-white;
+  font-weight: 800;
+  font-style: normal;
+  font-size: 96px;
+  line-height: 100%;
+  text-align: center;
+  max-width: 1600px;
+}
+.page-header__text {
+    @extend %auto-margin;
+    margin-top: 52px;
+  color: $prim-white;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 133%;
+  text-align: center;
+  max-width: 990px;
 }
