--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,10 @@
-@import '../fonts/stylesheet.css';
+
 @import '../sass/utils/variables';
 @import '../sass/base/common';
 @import '../sass/utils/placeholders';
 @import '../sass/utils/breakpoints';
-// @import '../sass/components/page-header';
-// @import '../sass/components/logo';
+@import '../sass/components/page-header';
+@import '../sass/components/player';
 // @import '../sass/components/menu';
 // @import '../sass/components/main-nav';
 // @import '../sass/components/contacts';
