--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,7 +19,7 @@
 // @import '../sass/components/footer';
 
 // @import '../sass/components/portfolio';
-// @import '../sass/components/choice';
+@import '../sass/components/choice';
 // @import '../sass/components/work';
 
 
