--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,12 @@
-@import url(f:\Projects\githWerst\fonts\stylesheet.css);
+@font-face {
+  font-family: 'Alliance No.1';
+  src: url("../fonts/AllianceNo1-Light.eot");
+  src: local("Alliance No.1 Light"), local("AllianceNo.1-Light"), url("../fonts/AllianceNo1-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-Light.woff2") format("woff2"), url("../fonts/AllianceNo1-Light.woff") format("woff"), url("../fonts/AllianceNo1-Light.ttf") format("truetype"), url("../fonts/AllianceNo1-Light.svg#AllianceNo.1-Light") format("svg");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -87,23 +95,25 @@ a {
 }
 
 .page-header__container {
+  padding-top: 34px;
   max-width: 1920px;
 }
 
 .logo {
   color: #FFFFFF;
   font-weight: 800;
-  font-style: normal;
   font-size: 30px;
   line-height: 0.8;
+  padding: 0;
+  margin: 0;
 }
 
 .logo__icon {
   padding: 0;
   margin: 0;
-  min-width: 45px;
+  display: inline-block;
+  width: 45px;
   height: 45px;
-  z-index: 5;
 }
 
 .page-header__title {
@@ -112,7 +122,7 @@ a {
   font-weight: 800;
   font-style: normal;
   font-size: 96px;
-  line-height: 100%;
+  line-height: 1;
   text-align: center;
   max-width: 1600px;
 }
