--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,13 @@
 
+@import '../fonts/fonts';
 @import '../sass/utils/variables';
 @import '../sass/base/common';
 @import '../sass/utils/placeholders';
 @import '../sass/utils/breakpoints';
 @import '../sass/components/page-header';
 @import '../sass/components/player';
+@import '../sass/components/choice';
+
 // @import '../sass/components/menu';
 // @import '../sass/components/main-nav';
 // @import '../sass/components/contacts';
@@ -19,7 +22,7 @@
 // @import '../sass/components/footer';
 
 // @import '../sass/components/portfolio';
-@import '../sass/components/choice';
+
 // @import '../sass/components/work';
 
 
