--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,9 +6,9 @@
 @import '../sass/utils/breakpoints';
 @import '../sass/components/page-header';
 @import '../sass/components/player';
-@import '../sass/components/choice';
+@import '../sass/components/description';
 
-// @import '../sass/components/menu';
+@import '../sass/components/service';
 // @import '../sass/components/main-nav';
 // @import '../sass/components/contacts';
 // @import '../sass/components/hero';
