--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,5 +1,5 @@
 $prim-black: #24292F;
-$sec-black: #949DA7;
+$sec-black: #6E7681;
 $tre-black: #2196f3;
 $prim-white: #FEFFFF;
 $sec-white: #FFFFFF;
