--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 
 @import '../sass/components/service';
 // @import '../sass/components/main-nav';
-// @import '../sass/components/contacts';
+@import '../sass/components/competitors';
 // @import '../sass/components/hero';
 // @import '../sass/components/button';
 // @import '../sass/components/features';
