--- a/css/main.css
+++ b/css/main.css
@@ -612,6 +612,11 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-top: 49px;
+}
+
+.service__list {
+  margin: 0;
 }
 
 .service__item {
@@ -636,6 +641,7 @@ a {
   height: 0px;
   margin: 0;
   overflow: hidden;
+  display: none;
 }
 
 .service__content__list__active {
@@ -650,7 +656,7 @@ a {
 
 .service__content__item {
   width: calc((100% - 129px)/2);
-  margin: 0 129px 50px 0;
+  margin-right: 129px;
   z-index: 1;
 }
 
@@ -677,5 +683,60 @@ a {
   /* or 24px */
   letter-spacing: 0.01em;
   color: #949DA7;
+}
+
+.competitors {
+  margin: 0 auto;
+  padding-top: 47px;
+  padding-bottom: 250px;
+}
+
+.competitors__container {
+  position: relative;
+  margin: 0 auto;
+}
+
+.competitors__baner {
+  max-width: 1480px;
+  height: 624px;
+  margin: 0 auto;
+  background: content-box url("../images/baner.png");
+  background-size: cover;
+  -webkit-filter: drop-shadow(0px 55px 100px rgba(0, 0, 0, 0.25));
+          filter: drop-shadow(0px 55px 100px rgba(0, 0, 0, 0.25));
+  border-radius: 11px;
+}
+
+.competitors_title {
+  padding-top: 100px;
+  font-style: 700;
+  font-weight: 900;
+  font-size: 48px;
+  line-height: 110%;
+  /* identical to box height, or 53px */
+  text-align: center;
+  letter-spacing: 0.01em;
+  color: #FFFFFF;
+}
+
+.competitors__text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 110%;
+  margin: 34px auto 35px auto;
+  /* or 40px */
+  max-width: 800px;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.competitors__text > span {
+  font-weight: 700;
+}
+
+.competitors__btn {
+  margin: 0 auto;
+  display: inline-block;
 }
 /*# sourceMappingURL=main.css.map */
