--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-
+@import '../sass/components/animaltext';
 @import '../fonts/fonts';
 @import '../sass/utils/variables';
 @import '../sass/base/common';
@@ -9,7 +9,7 @@
 @import '../sass/components/description';
 
 @import '../sass/components/service';
-// @import '../sass/components/main-nav';
+
 @import '../sass/components/competitors';
 // @import '../sass/components/hero';
 // @import '../sass/components/button';
