--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,53 @@
+.word1 {
+  position: absolute;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  opacity: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.letter {
+  display: inline-block;
+  position: relative;
+  white-space: pre-wrap;
+  -webkit-transform-origin: 50% 50% 0px;
+          transform-origin: 50% 50% 0px;
+}
+
+.letter.out {
+  -webkit-transform: rotateX(90deg);
+          transform: rotateX(90deg);
+  -webkit-transition: -webkit-transform 0.17s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  transition: -webkit-transform 0.17s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  transition: transform 0.17s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  transition: transform 0.17s cubic-bezier(0.55, 0.055, 0.675, 0.19), -webkit-transform 0.17s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+
+.letter.behind {
+  -webkit-transform: rotateX(-90deg);
+          transform: rotateX(-90deg);
+}
+
+.letter.in {
+  -webkit-transform: rotateX(0deg);
+          transform: rotateX(0deg);
+  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: -webkit-transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275), -webkit-transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.try {
+  line-height: 1.5;
+  margin-top: 4.3vw;
+  font-family: "Raleway-Regular";
+  font-size: 1.3vw;
+  line-height: 1.5;
+}
+
 @font-face {
   font-family: 'Alliance No.1';
   src: url("../fonts/AllianceNo1-Light.eot");
@@ -5,6 +55,11 @@
   font-weight: 300;
   font-style: normal;
   font-display: swap;
+}
+
+@font-face {
+  font-family: "BwModelica-Black";
+  src: url("../fonts/BwModelica-Black.otf");
 }
 
 html {
@@ -96,7 +151,7 @@ a {
 
 .page-header__container {
   padding-top: 34px;
-  max-width: 1920px;
+  max-width: 1500px;
 }
 
 .logo {
@@ -128,7 +183,7 @@ a {
 }
 
 .page-header__text {
-  margin-top: 52px;
+  margin-top: 140px;
   color: #FEFFFF;
   font-weight: 400;
   font-size: 24px;
@@ -687,13 +742,42 @@ a {
 
 .competitors {
   margin: 0 auto;
-  padding-top: 47px;
+  padding-top: 247px;
   padding-bottom: 250px;
 }
 
 .competitors__container {
   position: relative;
   margin: 0 auto;
+  max-width: 1500px;
+}
+
+.competitors__container::before {
+  content: "";
+  background-image: url("../images/Polygon.png");
+  width: 893px;
+  height: 893px;
+  position: absolute;
+  z-index: 0;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  left: -10%;
+  top: -25%;
+}
+
+.competitors__container::after {
+  content: "";
+  background-image: url("../images/bg-ball1.png");
+  width: 520px;
+  height: 520px;
+  position: absolute;
+  z-index: -1;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  right: -5%;
+  bottom: -15%;
 }
 
 .competitors__baner {
@@ -702,9 +786,38 @@ a {
   margin: 0 auto;
   background: content-box url("../images/baner.png");
   background-size: cover;
+  z-index: 10;
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-filter: drop-shadow(0px 55px 100px rgba(0, 0, 0, 0.25));
           filter: drop-shadow(0px 55px 100px rgba(0, 0, 0, 0.25));
   border-radius: 11px;
+}
+
+.competitors__baner:hover .banner__overlay {
+  opacity: 0.8;
+  z-index: -5;
+}
+
+.competitors__baner:hover, .competitors__baner:focus {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.banner__overlay {
+  position: fixed;
+  left: -80%;
+  top: -250%;
+  width: 200vw;
+  height: 200vh;
+  background-color: #5738c7c4;
+  z-index: -1;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .competitors_title {
@@ -716,7 +829,7 @@ a {
   /* identical to box height, or 53px */
   text-align: center;
   letter-spacing: 0.01em;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .competitors__text {
@@ -728,7 +841,7 @@ a {
   /* or 40px */
   max-width: 800px;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .competitors__text > span {
@@ -737,6 +850,30 @@ a {
 
 .competitors__btn {
   margin: 0 auto;
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 226px;
+  height: 63px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  border-radius: 34.5px;
+  background: none;
+  color: #ffffff;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  outline: none;
+  border: 2px solid #ffffff;
+}
+
+.competitors__btn:hover, .competitors__btn:focus {
+  background-color: aquamarine;
+  color: black;
 }
 /*# sourceMappingURL=main.css.map */
