--- a/fonts/_fonts.scss
+++ b/fonts/_fonts.scss
@@ -12,3 +12,8 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: "BwModelica-Black";
+    src: url("../fonts/BwModelica-Black.otf");
+}
+
