--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,7 @@
 @import '../sass/components/service';
 
 @import '../sass/components/competitors';
-// @import '../sass/components/hero';
+@import '../sass/components/questions';
 // @import '../sass/components/button';
 // @import '../sass/components/features';
 // @import '../sass/components/backdrop';
