--- a/sass/components/_competitors.scss
+++ b/sass/components/_competitors.scss
@@ -1,12 +1,21 @@
 .competitors {
-  margin: 0 auto;
+  @extend %auto-margin;
   padding-top: 247px;
   padding-bottom: 250px;
 }
 .competitors__container {
+  @extend %auto-margin;
   position: relative;
-  margin: 0 auto;
   max-width: 1500px;
+  transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
+&:hover .banner__overlay {
+    opacity: 0.8;
+    z-index: -5;
+  }
+&:hover ,
+&:focus  {
+    transform: scale(1.1);
+  }
   &::before {
     content: "";
     background-image: url("../images/Polygon.png");
@@ -42,21 +51,17 @@
   background: content-box url("../images/baner.png");
   background-size: cover;
   z-index: 10;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
   // position: relative;
   //    background-position:top;
 
   // box-shadow: 0px 55px 100px rgba(0, 0, 0, 0.25);
   filter: drop-shadow(0px 55px 100px rgba(0, 0, 0, 0.25));
   border-radius: 11px;
-  &:hover .banner__overlay {
-    opacity: 0.8;
-    z-index: -5;
-  }
-  &:hover,
-  &:focus {
-    transform: scale(1.2);
-  }
+  
+  
+
+  
   // transform: rotate(-180deg);
 }
 .banner__overlay {
@@ -70,7 +75,7 @@
   z-index: -1;
   opacity: 0;
   pointer-events: none;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .competitors_title {
   padding-top: 100px;
@@ -84,6 +89,7 @@
   letter-spacing: 0.01em;
 
   color: #ffffff;
+ 
 }
 .competitors__text {
   font-style: normal;
