--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -13,6 +13,7 @@
   max-width: 1500px;
 }
 .logo {
+  
   color: $sec-white;
     font-weight: 800;
     // font-style: normal;
@@ -20,6 +21,7 @@
   line-height: 0.8;
   padding: 0;
   margin: 0;
+  padding-left: 100px;
   
 }
 .logo__icon {
