--- a/sass/components/_player.scss
+++ b/sass/components/_player.scss
@@ -57,7 +57,7 @@
 }
 
 .loading .p-wrapper .layer--overlay {
-    // background: #BAD3Ff; 
+    background: #ffffff; 
     width: 60%;
     height: 60%;
     position: absolute;
@@ -65,14 +65,14 @@
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 50%;
-    border: 50px solid #BAD3FF;
+    // border: 50px solid #ffffff;
     transition: .6s;
 }
 
 .loading .p-wrapper .layer--movable {
     width: 207px;
     height: 207px;
-    background: black;
+    // background: black;
     border-radius: 100%;
     position: absolute;
     // z-index: 20;
@@ -82,13 +82,13 @@
     width: 100%;
     height: 100%;
     position: relative;
-    mix-blend-mode: multiply;
     border-radius: 50%;
     overflow: hidden;
+    
 }
 
 .loading .preview__video {
-    /* width: 100%; */
+    width: 100%;
     height: 100%;
 }
 
@@ -120,6 +120,7 @@
     left: 0;
     padding: 0;
     z-index: 10;
+    // box-shadow: 0px 0px 62px 62px rgba(5, 8, 10, 0.89);
 }
 
 .loading .preview .item {
@@ -129,14 +130,17 @@
     border-radius: 100%;
     height: 100%;
     width: 100%;
+    // box-shadow: 0px 0px 62px 62px rgba(5, 8, 10, 0.89);
+    
 }
 
 .loading .preview .item__play {
+    
     display: block;
     background: white;
     width: 60%;
     height: 60%;
-    border-radius: 100%;
+    border-radius: 50%;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
@@ -146,24 +150,51 @@
     bottom: -10px;
     animation: pulse 2s infinite;
     transition: .6s;
-}
+    box-shadow: 0px 0px 62px 62px rgba(5, 8, 10, 0.89);
+    z-index: 25;
+    // &:hover {
+    //     transform: scale(1.2);
 
-.loading .preview .item__play:before {
-    content: "";
+    // }
+    // mix-blend-mode: normal;
+
+}
+ 
+    
+.btnImg {
+    display: flex;
     position: absolute;
     left: 50%;
-    width: 60px;
-    height: 60px;
-    background: #000;
     top: 50%;
-    margin: 0 auto;
-    transform: translate(-40%, -50%);
-    clip-path: polygon(0 0, 0% 100%, 100% 50%);
-    border-top: 30px solid transparent;
-    border-bottom: 30px solid transparent;
-    border-left: 45px solid #000;
-    z-index: 10;
+    z-index: 100;
+    transform: translate(-50%,-49%);
+    
 }
+
+// .loading .preview .item__play::before{
+//     content: "";
+//     // mix-blend-mode: normal;
+//     position: absolute;
+//     left: 50%;
+//     width: 45px;
+//     height: 45px;
+//     top: 50%;
+//     background: rgb(5, 5, 5);
+//     color: black;
+//     background-blend-mode: normal;
+//     mix-blend-mode: normal;
+    
+//     margin: 0 auto;
+//     transform: translate(-50%, -50%);
+//     clip-path: polygon(0 0, 0% 100%, 100% 50%);
+//     border-top: 30px solid transparent;
+//     border-bottom: 30px solid transparent;
+//     border-left: 45px solid #000;
+//     box-shadow: 0px 0px 62px 62px rgba(5, 8, 10, 0.89);
+//     // z-index: 45;
+//     z-index: 200;
+//     // opacity: 0;
+// }
 
 .loading .preview .bg_play {
     position: absolute;
