--- a/css/main.css
+++ b/css/main.css
@@ -1,65 +1,136 @@
-.word1 {
-  position: absolute;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  opacity: 0;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-}
-
-.letter {
-  display: inline-block;
-  position: relative;
-  white-space: pre-wrap;
-  -webkit-transform-origin: 50% 50% 0px;
-          transform-origin: 50% 50% 0px;
-}
-
-.letter.out {
-  -webkit-transform: rotateX(90deg);
-          transform: rotateX(90deg);
-  -webkit-transition: -webkit-transform 0.17s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  transition: -webkit-transform 0.17s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  transition: transform 0.17s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  transition: transform 0.17s cubic-bezier(0.55, 0.055, 0.675, 0.19), -webkit-transform 0.17s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-.letter.behind {
-  -webkit-transform: rotateX(-90deg);
-          transform: rotateX(-90deg);
-}
-
-.letter.in {
-  -webkit-transform: rotateX(0deg);
-          transform: rotateX(0deg);
-  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  transition: -webkit-transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  transition: transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  transition: transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275), -webkit-transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-
-.try {
-  line-height: 1.5;
-  margin-top: 4.3vw;
-  font-family: "Raleway-Regular";
-  font-size: 1.3vw;
-  line-height: 1.5;
-}
-
 @font-face {
   font-family: 'Alliance No.1';
   src: url("../fonts/AllianceNo1-Light.eot");
-  src: local("Alliance No.1 Light"), local("AllianceNo.1-Light"), url("../fonts/AllianceNo1-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-Light.woff2") format("woff2"), url("../fonts/AllianceNo1-Light.woff") format("woff"), url("../fonts/AllianceNo1-Light.ttf") format("truetype"), url("../fonts/AllianceNo1-Light.svg#AllianceNo.1-Light") format("svg");
+  src: local("AllianceNo.1-Light"), url("../fonts/AllianceNo1-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-Light.woff2") format("woff2"), url("../fonts/AllianceNo1-Light.woff") format("woff"), url("../fonts/AllianceNo1-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "BwModelica-Black";
-  src: url("../fonts/BwModelica-Black.otf");
+  font-family: 'Alliance No.1';
+  src: url("../fonts/AllianceNo1-Black.eot");
+  src: local("AllianceNo.1-Black"), url("../fonts/AllianceNo1-Black.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-Black.woff2") format("woff2"), url("../fonts/AllianceNo1-Black.woff") format("woff"), url("../fonts/AllianceNo1-Black.ttf") format("truetype");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alliance No.1';
+  src: url("../fonts/AllianceNo1-ExtraBoldItalic.eot");
+  src: local("AllianceNo.1-ExtraBoldItalic"), url("../fonts/AllianceNo1-ExtraBoldItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-ExtraBoldItalic.woff2") format("woff2"), url("../fonts/AllianceNo1-ExtraBoldItalic.woff") format("woff"), url("../fonts/AllianceNo1-ExtraBoldItalic.ttf") format("truetype");
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alliance No.1';
+  src: url("../fonts/AllianceNo1-BlackItalic.eot");
+  src: local("AllianceNo.1-BlackItalic"), url("../fonts/AllianceNo1-BlackItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-BlackItalic.woff2") format("woff2"), url("../fonts/AllianceNo1-BlackItalic.woff") format("woff"), url("../fonts/AllianceNo1-BlackItalic.ttf") format("truetype");
+  font-weight: 900;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alliance No.1';
+  src: url("../fonts/AllianceNo1-BoldItalic.eot");
+  src: local("AllianceNo.1-BoldItalic"), url("../fonts/AllianceNo1-BoldItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-BoldItalic.woff2") format("woff2"), url("../fonts/AllianceNo1-BoldItalic.woff") format("woff"), url("../fonts/AllianceNo1-BoldItalic.ttf") format("truetype");
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alliance No.1';
+  src: url("../fonts/AllianceNo1-Bold.eot");
+  src: local("AllianceNo.1-Bold"), url("../fonts/AllianceNo1-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-Bold.woff2") format("woff2"), url("../fonts/AllianceNo1-Bold.woff") format("woff"), url("../fonts/AllianceNo1-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alliance No.1';
+  src: url("../fonts/AllianceNo1-ExtraBold.eot");
+  src: local("AllianceNo.1-ExtraBold"), url("../fonts/AllianceNo1-ExtraBold.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-ExtraBold.woff2") format("woff2"), url("../fonts/AllianceNo1-ExtraBold.woff") format("woff"), url("../fonts/AllianceNo1-ExtraBold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alliance No.2';
+  src: url("../fonts/AllianceNo2-Light.eot");
+  src: local("AllianceNo.2-Light"), url("../fonts/AllianceNo2-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo2-Light.woff2") format("woff2"), url("../fonts/AllianceNo2-Light.woff") format("woff"), url("../fonts/AllianceNo2-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alliance No.1';
+  src: url("../fonts/AllianceNo1-RegularItalic.eot");
+  src: local("AllianceNo.1-RegularItalic"), url("../fonts/AllianceNo1-RegularItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-RegularItalic.woff2") format("woff2"), url("../fonts/AllianceNo1-RegularItalic.woff") format("woff"), url("../fonts/AllianceNo1-RegularItalic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alliance No.1';
+  src: url("../fonts/AllianceNo1-LightItalic.eot");
+  src: local("AllianceNo.1-LightItalic"), url("../fonts/AllianceNo1-LightItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-LightItalic.woff2") format("woff2"), url("../fonts/AllianceNo1-LightItalic.woff") format("woff"), url("../fonts/AllianceNo1-LightItalic.ttf") format("truetype");
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alliance No.1';
+  src: url("../fonts/AllianceNo1-SemiBold.eot");
+  src: local("AllianceNo.1-SemiBold"), url("../fonts/AllianceNo1-SemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-SemiBold.woff2") format("woff2"), url("../fonts/AllianceNo1-SemiBold.woff") format("woff"), url("../fonts/AllianceNo1-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alliance No.1';
+  src: url("../fonts/AllianceNo1-Regular.eot");
+  src: local("AllianceNo.1-Regular"), url("../fonts/AllianceNo1-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-Regular.woff2") format("woff2"), url("../fonts/AllianceNo1-Regular.woff") format("woff"), url("../fonts/AllianceNo1-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alliance No.1';
+  src: url("../fonts/AllianceNo1-SemiBoldItalic.eot");
+  src: local("AllianceNo.1-SemiBoldItalic"), url("../fonts/AllianceNo1-SemiBoldItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-SemiBoldItalic.woff2") format("woff2"), url("../fonts/AllianceNo1-SemiBoldItalic.woff") format("woff"), url("../fonts/AllianceNo1-SemiBoldItalic.ttf") format("truetype");
+  font-weight: 600;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alliance No.1';
+  src: url("../fonts/AllianceNo1-Medium.eot");
+  src: local("AllianceNo.1-Medium"), url("../fonts/AllianceNo1-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-Medium.woff2") format("woff2"), url("../fonts/AllianceNo1-Medium.woff") format("woff"), url("../fonts/AllianceNo1-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Alliance No.1';
+  src: url("../fonts/AllianceNo1-MediumItalic.eot");
+  src: local("AllianceNo.1-MediumItalic"), url("../fonts/AllianceNo1-MediumItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/AllianceNo1-MediumItalic.woff2") format("woff2"), url("../fonts/AllianceNo1-MediumItalic.woff") format("woff"), url("../fonts/AllianceNo1-MediumItalic.ttf") format("truetype");
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
 }
 
 html {
@@ -78,6 +149,8 @@ body {
   color: #24292F;
   font-family: "Alliance No.1";
   letter-spacing: -0.03em;
+  margin: 0;
+  padding: 0;
 }
 
 h1,
@@ -132,26 +205,31 @@ a {
   transition: 400ms;
 }
 
-.page-header__container {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.page-header, .page-header__container, .page-header__title, .page-header__text, .illustration, .illustr, .description, .description__container, .service, .service__container, .competitors, .competitors__container, .questions, .questions__container {
+.page-header, .page-header__container, .page-header__main-contain, .page-header__title, .page-header__text, .illustration, .illustr, .description, .description__container, .service, .service__container, .competitors, .competitors__container, .questions, .questions__container {
   margin-right: auto;
   margin-left: auto;
 }
 
 .page-header {
-  background-image: url("../images/headbbgimg.png");
-  background-size: cover;
-  height: 707px;
-  background-position: center;
+  padding-bottom: 20%;
 }
 
 .page-header__container {
+  height: 707px;
+  background-image: url("../images/headbbgimg.png");
+  background-size: cover;
+  background-position: center;
+  position: sticky;
+  position: -webkit-sticky;
+  width: 100%;
   padding-top: 34px;
+  top: 0;
+}
+
+.page-header__main-contain {
   max-width: 1500px;
+  width: 100%;
+  padding: 0 15px 0 15px;
 }
 
 .logo {
@@ -161,7 +239,23 @@ a {
   line-height: 0.8;
   padding: 0;
   margin: 0;
-  padding-left: 100px;
+  padding-left: 250px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100px;
+}
+
+.logo > p {
+  width: 100%;
 }
 
 .logo__icon {
@@ -183,6 +277,12 @@ a {
   max-width: 1600px;
 }
 
+@media screen and (max-width: 1500px) {
+  .page-header__title {
+    font-size: 72px;
+  }
+}
+
 .page-header__text {
   margin-top: 140px;
   color: #FEFFFF;
@@ -193,10 +293,66 @@ a {
   max-width: 990px;
 }
 
-.illustration {
+.rotating-text p {
   position: relative;
-  margin-top: -150px;
-  padding-bottom: 49px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.rotating-text p .word {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  opacity: 0;
+  color: #FEFFFF;
+  font-weight: 800;
+  font-style: normal;
+  font-size: 96px;
+  line-height: 1;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+}
+
+@media screen and (max-width: 1500px) {
+  .rotating-text p .word {
+    font-size: 72px;
+  }
+}
+
+.rotating-text p .word .letter.out {
+  -webkit-transform: rotateX(90deg);
+          transform: rotateX(90deg);
+  -webkit-transition: 0.32s cubic-bezier(0.6, 0, 0.7, 0.2);
+  transition: 0.32s cubic-bezier(0.6, 0, 0.7, 0.2);
+}
+
+.rotating-text p .word .letter.in {
+  -webkit-transition: 0.38s ease;
+  transition: 0.38s ease;
+}
+
+.rotating-text p .word .letter.behind {
+  -webkit-transform: rotateX(-90deg);
+          transform: rotateX(-90deg);
+}
+
+.illustration {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  top: 35vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -738,25 +894,28 @@ a {
 .competitors {
   padding-top: 247px;
   padding-bottom: 250px;
+  position: relative;
+}
+
+.competitors:hover .banner__overlay {
+  opacity: 0.8;
+  z-index: -5;
+}
+
+.competitors:hover .competitors__container {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .competitors__container {
+  padding-left: 15px;
+  padding-right: 15px;
   position: relative;
   max-width: 1500px;
   -webkit-transition: -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.competitors__container:hover .banner__overlay {
-  opacity: 0.8;
-  z-index: -5;
-}
-
-.competitors__container:hover, .competitors__container:focus {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
 }
 
 .competitors__container::before {
@@ -801,10 +960,10 @@ a {
 
 .banner__overlay {
   position: fixed;
-  left: -80%;
-  top: -250%;
+  left: 0;
+  top: 0;
   width: 200vw;
-  height: 200vh;
+  height: 200vw;
   background-color: #5738c7c4;
   z-index: -1;
   opacity: 0;
@@ -870,6 +1029,10 @@ a {
   color: black;
 }
 
+.questions {
+  padding-bottom: 90px;
+}
+
 .questions__container {
   padding: 0 15px;
   display: -webkit-box;
@@ -886,6 +1049,7 @@ a {
 .questions__text-contain {
   max-width: 876px;
   width: 100%;
+  margin-left: auto;
 }
 
 .questions__title {
@@ -905,7 +1069,7 @@ a {
   line-height: 1.33;
   max-width: 821px;
   width: 100%;
-  color: #6E7681;
+  color: #6e7681;
 }
 
 .questions__list {
@@ -917,6 +1081,10 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-top: 46px;
+  margin-left: 25%;
+  margin-right: 25%;
+  padding: 0;
 }
 
 .questions__item {
@@ -929,6 +1097,11 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-shadow: 0px -25px 100px -10px rgba(112, 120, 131, 0.1), 0px 25px 100px -10px rgba(110, 118, 129, 0.1);
+          box-shadow: 0px -25px 100px -10px rgba(112, 120, 131, 0.1), 0px 25px 100px -10px rgba(110, 118, 129, 0.1);
+  border-radius: 10px;
+  margin-bottom: 15px;
+  background-color: #ffffff;
 }
 
 .questions__item__btn-contain {
@@ -984,12 +1157,157 @@ a {
   -webkit-transition: width 2000 linear;
   transition: width 2000 linear;
   /* or 133% */
-  color: #6E7681;
+  color: #6e7681;
 }
 
 .questions__item__content.active_item {
-  width: 100%;
+  width: 90%;
   height: auto;
   margin: 15px;
+}
+
+.footer__title {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 64px;
+  line-height: 88px;
+  letter-spacing: 0.01em;
+  color: #FFFFFF;
+}
+
+.footer__title > span {
+  color: brown;
+}
+
+.footer__desc {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 24px;
+  /* or 171% */
+  letter-spacing: 0.02em;
+  color: #949DA7;
+}
+
+.footter__contain {
+  position: relative;
+  text-align: center;
+  background: linear-gradient(60deg, #543ab7 0%, #00acc1 100%);
+  color: white;
+}
+
+.logo {
+  width: 50px;
+  fill: white;
+  padding-right: 15px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.inner-footer {
+  height: 200px;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-size: 35px;
+}
+
+.flex {
+  /*Flexbox for containers*/
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.waves {
+  position: relative;
+  width: 100%;
+  height: 15vh;
+  margin-bottom: -7px;
+  /*Fix for safari gap*/
+  min-height: 100px;
+  max-height: 150px;
+}
+
+.content {
+  position: relative;
+  padding: 25px 0;
+  font-size: 30px;
+  text-align: center;
+  background-color: white;
+}
+
+/* Animation */
+.parallax > use {
+  -webkit-animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+          animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+}
+
+.parallax > use:nth-child(1) {
+  -webkit-animation-delay: -2s;
+          animation-delay: -2s;
+  -webkit-animation-duration: 7s;
+          animation-duration: 7s;
+}
+
+.parallax > use:nth-child(2) {
+  -webkit-animation-delay: -3s;
+          animation-delay: -3s;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+}
+
+.parallax > use:nth-child(3) {
+  -webkit-animation-delay: -4s;
+          animation-delay: -4s;
+  -webkit-animation-duration: 13s;
+          animation-duration: 13s;
+}
+
+.parallax > use:nth-child(4) {
+  -webkit-animation-delay: -5s;
+          animation-delay: -5s;
+  -webkit-animation-duration: 20s;
+          animation-duration: 20s;
+}
+
+@-webkit-keyframes move-forever {
+  0% {
+    -webkit-transform: translate3d(-90px, 0, 0);
+            transform: translate3d(-90px, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(85px, 0, 0);
+            transform: translate3d(85px, 0, 0);
+  }
+}
+
+@keyframes move-forever {
+  0% {
+    -webkit-transform: translate3d(-90px, 0, 0);
+            transform: translate3d(-90px, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(85px, 0, 0);
+            transform: translate3d(85px, 0, 0);
+  }
+}
+
+/*Shrinking for mobile*/
+@media (max-width: 768px) {
+  .waves {
+    height: 40px;
+    min-height: 40px;
+  }
+  .content {
+    height: 30vh;
+  }
 }
 /*# sourceMappingURL=main.css.map */
