--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -12,6 +12,11 @@ html {
     color: $prim-black;
     font-family: $prim-font;
     letter-spacing: -0.03em;
+    margin: 0;
+    padding: 0;
+    
+  // max-width: 100vw;
+  //   overflow-x: hidden;
   }
   h1,
   h2,
