--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,242 +1,118 @@
-.footer {
-  background-color: $hero-bgr-color;
-  @extend %section-padding;
-  @extend %auto-margin;
-}
-
-.footer-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-width: 100%;
-  max-width: 480px;
-  @extend %contain-padding;
-  @extend %auto-margin;
-  @media screen and (min-width: 768px) {
-    max-width: 768px;
-    flex-wrap: wrap;
-    align-items: baseline;
-    flex-direction: row;
-  }
-  @media screen and (min-width: 1200px) {
-    max-width: 1200px;
-    text-align: left;
-  }
-  
-}
-.footer-contacts {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 60px;
-  
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    width: 50%;
-  }
-  @media screen and (min-width: 1200px) {
-    margin-bottom: 0;
-    margin-right: 70px;
-    text-align: left;
-    
-    align-items: flex-start;
-    // margin-left: 0;
-  }
-}
-
-.footer-contacts__address {
+.footer__title {
   font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  color: $hero-text-color;
-  // text-align: left;
-  margin-top: 20px;
-  margin-bottom: 0;
-  padding: 0;
-  // text-align: center;
+font-weight: 900;
+font-size: 64px;
+line-height: 88px;
+letter-spacing: 0.01em;
+
+color: #FFFFFF;
+&>span {
+  color: brown;
 }
-.footer-contacts__label {
-  margin-bottom: 9px;
+}
+.footer__desc {
+  font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 24px;
+/* or 171% */
+
+letter-spacing: 0.02em;
+
+color: #949DA7;
 }
 
-.footer-contacts__list {
-  @extend %list;
+.footter__contain {
+  position: relative;
+  text-align: center;
+  background: linear-gradient(
+    60deg,
+    rgba(84, 58, 183, 1) 0%,
+    rgba(0, 172, 193, 1) 100%
+  );
+  color: white;
 }
-.footer-contacts__item {
-  // list-style: none;
-  margin-bottom: 9px;
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-.footer-contacts__link {
-  text-decoration: none;
-  color: rgba(255, 255, 255, 0.6);
-  letter-spacing: 0.02em;
-  // text-align: left;
+.logo {
+  width: 50px;
+  fill: white;
+  padding-right: 15px;
   display: inline-block;
-  // padding: 0;
-  // margin: 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    color: $accent-color;
-  }
+  vertical-align: middle;
 }
-.footer-social {
+
+.inner-footer {
+  height: 200px;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-size: 35px;
+}
+
+.flex {
+  /*Flexbox for containers*/
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 60px;
-
-  @media screen and (min-width:768px) and (max-width: 1199px) {
-    width: 50%;
-  }
-  @media screen and (min-width: 1200px) {
-    // margin-right: auto;
-    justify-content: left;
-text-align: left;
-margin-bottom: 0px;
-  }
-}
-
-.footer-social__tittel {
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 1.19;
-  color: $hero-text-color;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  width: 100%;
-  @media screen and (min-width:1200px) {
-    text-align: left;
-  }
-}
-.footer-social__list {
-  @extend %list;
-  display: flex;
-  flex-wrap: wrap;
-}
-.footer-social__item {
-  margin-right: 10px;
-  width: 44px;
-  height: 44px;
-  &:last-child {
-    margin-right: 0px;
-  }
-}
-
-.footer-social__icon {
-  fill: $hero-text-color;
-}
-.footer-social__link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    background-color: $accent-color;
-  }
-}
-
-.footer-folov {
-  display: flex;
-  flex-direction: column;
   text-align: center;
-  align-items: center;
-  
-  // width: 100%;
-  @media screen and (min-width: 768px) and (max-width:1199px) {
-    width: 450px;
-  }
-  @media screen and (min-width: 1200px) {
-    // flex-wrap: wrap;
-    flex-direction: row;
-    align-items: flex-end;
-  margin-left: auto;
-  }
 }
-.footer-folov__label {
-  text-transform: uppercase;
-  color: $hero-text-color;
-  font-weight: 700;
-  line-height: 1.19;
-  font-size: 14px;
-  width: 100%;
-@media screen and (min-width: 1200px) {
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    // position: relative;
-  }
-}
-// .footer-folov__form {
-//   display: flex;
-//   // flex-wrap: wrap;
-//   flex-direction: column;
-  
-//   justify-content: center;
-//   @media screen and (min-width: 1200px) {
-//     // width: 358px;
-//     flex-direction: row;
-    
-//   }
-// }
-.footer-folov__input {
-  background-color: rgba(33, 150, 243, 0);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  padding: 15px 16px;
-  border-radius: 4px;
-  box-shadow: none;
-  width: 100%;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  color: rgba(255, 255, 255, 0.6);
-  cursor: pointer;
 
-  margin-top: 20px;
-  margin-bottom: 20px;
-
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-  @media screen and (min-width: 1200px) {
-    width: 358px;
-    margin-bottom: 0;
-    // margin-bottom: 20px;
-    margin-right: 12px;
-  }
+.waves {
+  position: relative;
+  width: 100%;
+  height: 15vh;
+  margin-bottom: -7px; /*Fix for safari gap*/
+  min-height: 100px;
+  max-height: 150px;
 }
-.footer-folov__button {
-  padding: 10px 29px;
-  background-color: $accent-color;
-  // margin-left: 12px;
-  border-radius: 4px;
-// @extend %auto-margin;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
+
+.content {
+  position: relative;
+  padding: 25px 0;
+  font-size: 30px;
+  // height: 10vh;
   text-align: center;
-  color: $hero-text-color;
-max-width: 200px;
-max-height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
- 
-  
+  background-color: white;
 }
-.footer-folov__icon {
-  fill: $hero-text-color;
-  margin-left: 10px;
+
+/* Animation */
+
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+}
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
+}
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
+}
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
+}
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
+}
+@keyframes move-forever {
+  0% {
+    transform: translate3d(-90px, 0, 0);
+  }
+  100% {
+    transform: translate3d(85px, 0, 0);
+  }
+}
+/*Shrinking for mobile*/
+@media (max-width: 768px) {
+  .waves {
+    height: 40px;
+    min-height: 40px;
+  }
+  .content {
+    height: 30vh;
+  }
+  // h1 {
+  //   font-size: 24px;
+  // }
 }
