--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,41 +1,63 @@
 .page-header {
   @extend %auto-margin;
-  background-image: url("../images/headbbgimg.png");
-  background-size: cover;
-  height: 707px;
-  background-position: center;
-  
+  padding-bottom: 20%;
 }
 .page-header__container {
-  @extend %contain-padding;
+  @extend %auto-margin;
+  // overflow: hidden;
+  // max-width: 1920px;
+  height: 707px;
+  background-image: url("../images/headbbgimg.png");
+  background-size: cover;
+  background-position: center;
+  position: sticky;
+  position: -webkit-sticky;
+  // max-width: 1920px;
+  width: 100%;
+
+  // @extend %contain-padding;
   @extend %auto-margin;
   padding-top: 34px;
+  top: 0;
+  // max-width: 1500px;
+}
+.page-header__main-contain {
   max-width: 1500px;
+  width: 100%;
+  @extend %auto-margin;
+  padding: 0 15px 0 15px;
+  
 }
 .logo {
-  
   color: $sec-white;
-    font-weight: 800;
-    // font-style: normal;
+  font-weight: 800;
+  // font-style: normal;
   font-size: 30px;
   line-height: 0.8;
   padding: 0;
   margin: 0;
-  padding-left: 100px;
-  
+  padding-left: 250px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  &>p{
+    width: 100%;
+  }
 }
 .logo__icon {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 
   display: inline-block;
   width: 45px;
   height: 45px;
-//   z-index: 5;
+  //   z-index: 5;
 }
 .page-header__title {
-    @extend %auto-margin; 
-    margin-top: 108px;
+  @extend %auto-margin;
+  margin-top: 108px;
   color: $prim-white;
   font-weight: 800;
   font-style: normal;
@@ -43,10 +65,13 @@
   line-height: 1;
   text-align: center;
   max-width: 1600px;
+  @media screen and (max-width: 1500px) {
+    font-size: 72px;
+  }
 }
 .page-header__text {
-    @extend %auto-margin;
-    margin-top: 140px;
+  @extend %auto-margin;
+  margin-top: 140px;
   color: $prim-white;
   font-weight: 400;
   font-size: 24px;
@@ -54,6 +79,3 @@
   text-align: center;
   max-width: 990px;
 }
-
-
-
