--- a/sass/components/_player.scss
+++ b/sass/components/_player.scss
@@ -1,10 +1,11 @@
 
 .illustration {
-    position: relative;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     @extend %auto-margin;
-    // width: 1200px;
-    margin-top: -150px;
-    padding-bottom: 49px;
+    top: 35vh;
+   
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -15,9 +16,7 @@
         z-index: 2;
         max-width: 948px;
         width: 100%;
-        @extend %auto-margin;
-       
-    
+        @extend %auto-margin;    
     }
  .pleyer_img {
     max-width: 948px;
@@ -53,7 +52,6 @@
     cursor: pointer;
     box-shadow: none;
     transition: .6s;
-    
 }
 
 .loading .p-wrapper .layer--overlay {
