--- a/sass/components/_questions.scss
+++ b/sass/components/_questions.scss
@@ -1,103 +1,115 @@
 .questions {
-    @extend %auto-margin;
+  @extend %auto-margin;
+  padding-bottom: 90px;
 }
 .questions__container {
-    @extend %auto-margin;
-    padding: 0 15px;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    max-width: 1500px;
+  @extend %auto-margin;
+  padding: 0 15px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  max-width: 1500px;
 }
 .questions__text-contain {
-    max-width: 876px;
-    width: 100%;
+  max-width: 876px;
+  width: 100%;
+  margin-left: auto;
+//   justify-content: flex-end;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: flex-end;
+
 }
 .questions__title {
-    font-style: normal;
-font-weight: bold;
-font-size: 64px;
-line-height: 110%;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 110%;
 
-letter-spacing: 0.01em;
-margin-bottom: 46px;
+  letter-spacing: 0.01em;
+  margin-bottom: 46px;
 
-color: #000000;
+  color: #000000;
 }
 .questions__text {
-    font-style: normal;
-font-weight: 500;
-font-size: 24px;
-line-height: 1.33;
-max-width: 821px;
-    width: 100%;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.33;
+  max-width: 821px;
+  width: 100%;
 
-color: #6E7681;
+  color: #6e7681;
 }
 .questions__list {
-    display: flex;
-    max-width: 767px;
-    flex-direction: column;
+  display: flex;
+  max-width: 767px;
+  flex-direction: column;
+  margin-top: 46px;
+  margin-left:25%;
+  margin-right: 25%;
+  padding: 0;
 }
 .questions__item {
-    display: flex;
-    width: 100%;
-    padding: 15px;
-    flex-direction: column;
-
+  display: flex;
+  width: 100%;
+  padding: 15px;
+  flex-direction: column;
+  box-shadow: 0px -25px 100px -10px rgba(112, 120, 131, 0.1),
+    0px 25px 100px -10px rgba(110, 118, 129, 0.1);
+  border-radius: 10px;
+  margin-bottom: 15px;
+  background-color: #ffffff;
 }
 .questions__item__btn-contain {
-    display: flex;
-    width: 100%;
-    padding: 15px;
-    justify-content: space-between;
+  display: flex;
+  width: 100%;
+  padding: 15px;
+  justify-content: space-between;
 }
 .questions__item__text {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 150%;
-    /* or 36px */
-    
-    letter-spacing: 0.01em;
-    
-    color: #000000;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 150%;
+  /* or 36px */
+
+  letter-spacing: 0.01em;
+
+  color: #000000;
 }
 .questions__item__btn {
-    width: 34px;
-    height: 34px;
-    background-color: inherit;
-    padding: 0;
-    border: none;
-    z-index: 5;
-    &.btn__is-active{
-        transform: rotate(45deg);
-    }
-    
+  width: 34px;
+  height: 34px;
+  background-color: inherit;
+  padding: 0;
+  border: none;
+  z-index: 5;
+  &.btn__is-active {
+    transform: rotate(45deg);
+  }
 }
 .questions__item__btn__icon {
-    width: 34px;
-    height: 34px;
-    z-index: -1;
-    
+  width: 34px;
+  height: 34px;
+  z-index: -1;
 }
 .questions__item__content {
-    font-style: normal;
-font-weight: 500;
-font-size: 24px;
-line-height: 32px;
-width: 1px;
-height: 1px;
-margin: -1px;
-overflow: hidden;
-transition: width 2000 linear;
-/* or 133% */
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 32px;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  transition: width 2000 linear;
+  /* or 133% */
 
-
-color: #6E7681;
-&.active_item {
-width: 100%;
-height: auto;
-margin: 15px;
-}
+  color: #6e7681;
+  &.active_item {
+    width: 90%;
+    height: auto;
+    margin: 15px;
+  }
 }
